buildscript {
    repositories {
        // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id 'maven-publish'
    id 'java-library'
    id 'signing'
    id 'idea'
    id 'net.minecraftforge.gradle' version '5.1.+'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'org.spongepowered.mixin'

group = group_id
version = mod_version

java {
    archivesBaseName = mod_name
    toolchain.languageVersion = JavaLanguageVersion.of(8)
    //withJavadocJar()
    withSourcesJar()
}

minecraft {
    mappings channel: 'parchment', version: '2022.03.06-1.16.5'
    accessTransformer = file("src/main/resources/META-INF/accesstransformer.cfg")
    runs {
        client {
            workingDirectory project.file('run')
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'coldsweat'
            mods {
                coldsweat {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'coldsweat'
            mods {
                coldsweat {
                    source sourceSets.main
                }
            }
        }

        gameTestServer {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'coldsweat'
            mods {
                coldsweat {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            args '--mod', 'cold_sweat', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
            mods {
                cold_sweat {
                    source sourceSets.main
                }
            }
        }
    }
}

mixin {
    add sourceSets.main, "cold_sweat.mixin-refmap.json"
    config 'cold_sweat.mixin.json'
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenCentral()
    maven {
        name = 'Forge'
        url = 'https://maven.minecraftforge.net'
    }
    maven {
        name = 'Minecraft libraries'
        url = 'https://libraries.minecraft.net'
    }
    maven {
        name = 'CurseForge'
        url 'https://www.cursemaven.com'
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = 'Registrate'
        url = 'https://maven.tterrag.com'
    }
    maven {
        name = 'Kotlin'
        url = 'https://thedarkcolour.github.io/KotlinForForge/'
    }
    maven {
        name = "Valkyrien Skies"
        url = 'https://maven.valkyrienskies.org'
    }
    maven {
        name = 'Architectury'
        url = "https://maven.architectury.dev"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.ftb.mods"
        }
    }
    maven {
        name = 'JitPack'
        url 'https://jitpack.io'
        content {
            includeGroup "com.github.rtyley"
        }
    }
    maven {
        url = "https://maven.teamresourceful.com/repository/maven-public/"
    }
    maven {
        name = "Jared's maven (JEI)"
        url = "https://maven.blamejared.com/"
    }
}

dependencies {
    implementation 'com.github.t9t.minecraft-rcon-client:minecraft-rcon-client:1.0.0'
    minecraft 'net.minecraftforge:forge:1.16.5-36.2.42'
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    // Runtime Mods
    //runtimeOnly fg.deobf("curse.maven:spark-361579:3767277")
    //runtimeOnly fg.deobf("curse.maven:atmospheric-362393:3553332")
    //runtimeOnly fg.deobf("curse.maven:blueprint-382216:3607198")
    //runtimeOnly fg.deobf("curse.maven:coroutil-237749:3586476")
    //runtimeOnly fg.deobf("curse.maven:shutup-experimental-settings-407174:3188120")

    // Valkyrien Skies (Compat)
    compileOnly fg.deobf("curse.maven:valkyrien-skies-258371:4174267")

    // KubeJS (Compat)
    compileOnly fg.deobf("curse.maven:kubejs-238086:3647098")
    compileOnly fg.deobf("curse.maven:rhino-416294:3525704")
    compileOnly fg.deobf("curse.maven:architectury-api-419699:4521290")

    // JEI (Compat)
    implementation fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")

    // Mod Compat
    compileOnly fg.deobf("curse.maven:serene-seasons-291874:4537666")
    implementation fg.deobf("curse.maven:curios-309927:4419403")
    compileOnly fg.deobf("curse.maven:create-328085:3536025")
    compileOnly fg.deobf("curse.maven:flywheel-486392:3535459")
    compileOnly fg.deobf("curse.maven:spoiled-364918:3776531")
    implementation fg.deobf("curse.maven:ob-aquamirae-536254:4420334")
    implementation fg.deobf("curse.maven:obscure-api-638417:4420298")
    compileOnly fg.deobf("curse.maven:caves-and-cliffs-417430:3592876")
    compileOnly fg.deobf("curse.maven:better-weather-400714:3420517")
    compileOnly fg.deobf("curse.maven:vampirism-233029:4640398")
    compileOnly fg.deobf("curse.maven:werewolves-417851:4662189")
    compileOnly fg.deobf("curse.maven:environmental-388992:3561534")
    compileOnly fg.deobf("curse.maven:primal-winter-393321:3444949")
}

idea.module { downloadJavadoc = downloadSources = true }

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifactId = 'coldsweat'
            pom {
                name = 'Cold Sweat'
                description = 'A Minecraft temperature mod with a powerful framework'
                url = 'https://github.com/Momo-Softworks/Cold-Sweat'
                licenses {
                    license {
                        name = 'GNU General Public License v3.0'
                        url = 'https://www.gnu.org/licenses/gpl-3.0.en.html'
                    }
                }
                developers {
                    developer {
                        id = 'mikul'
                        name = 'Mikul'
                    }
                }
                /*scm = {
                    connection = 'scm:git:git://github.com/Momo-Softworks/Cold-Sweat.git'
                    developerConnection = 'scm:git:ssh://github.com/Momo-Softworks/Cold-Sweat.git'
                    url = 'https://github.com/Momo-Softworks/Cold-Sweat'
                }*/
            }
        }
    }

    repositories {
        maven {
            name = "OSSRH"
            url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
            credentials {
                username = System.getenv("SONATYPE_USERNAME")
                password = System.getenv("SONATYPE_PASSWORD")
            }
        }
    }
}

// Example for how to get properties into the manifest for reading at runtime.
jar {
    manifest {
        attributes([
                "Specification-Title"     : "cold_sweat",
                "Specification-Vendor"    : "Mikul",
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "Mikul",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "TweakerClass"            : "org.spongepowered.asm.launch.MixinTweaker",
                "TweakOrder"              : 0,
                "MixinConfigs"            : "cold_sweat.mixin.json"
        ])
    }
}

jar.finalizedBy('reobfJar')

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}
